--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,45 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿<section class="info">
+    <div>
+        <p class="parrafoCursos">
+            Accedé a los mejores cursos del mercado en nuestra plataforma.<br>¿Querés obtener mayor información? 
+            <br>
+            <button type="button" class="btn btn-danger">SABER MÁS</button>
+         </p>
+    </div>
+</section>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<p class="mainTextGoal">¡Alcanzá tus metas de la mano de Digital Scilicet!</p>
+
+<div class="container">
+            <div class="row">
+              <div class="col-md-3 cardCursos">
+                <img src="https://img.icons8.com/bubbles/100/000000/hand-with-pen.png"/>
+                <p class="goal"><strong>Incrementá tus habilidades.</strong></p><br>
+                <p>Aprendé las últimas tecnologías más demandadas del mercado: Python, Java, C# y más.</p>
+              </div>
+
+              <div class="col-md-3 cardCursos">
+                <img src="https://img.icons8.com/bubbles/100/000000/training.png"/>                
+                <p class="goal"><strong>Te preparamos para todo.</strong></p><br>
+                <p>Vas a aprender de la mano de excelentes profesionales del sector.</p>
+              </div>
+
+              <div class="col-md-3 cardCursos">
+                <img src="https://img.icons8.com/bubbles/100/000000/contract.png"/>
+                <p class="goal"><strong>Conseguí tu propio certificado.</strong></p><br>
+                <p>Una vez finalizadas las materias, y cumpliendo los requisitos, del curso vas a recibir un certificado avalado por el Ministerio de Educación.</p>
+              </div>
+
+              <div class="col-md-3 cardCursos">
+                <img src="https://img.icons8.com/bubbles/100/000000/group.png"/>
+                <p class="goal"><strong>Mejorá tu trabajo en equipo.</strong></p><br>
+                <p>En Digital Scilicet vamos a incentivar tu trabajo en equipo, preparándote para el día de mañana cuando trabajes.</p>
+              </div>
+            </div>
+          </div>
+ </div>
+
+ <div class="modalidad">
+     <p class="distancia">Nueva modalidad 100% a distancia</p>
+    <p class="linea">Entendemos el contexto actual que está viviendo el mundo <br> por eso nos adaptamos y nuestros cursos son <br> de manera totalmente remota para que los puedas ver en cualquier <br> momento del día con profesor las 24hs.</p>
 </div>
