--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -43,6 +43,9 @@ a {
   font-size: 1.8rem;
   color: #e6e6e6;
   background-size: cover;
+  -webkit-box-shadow: -1px 13px 14px 0px rgba(0,0,0,0.37);
+  -moz-box-shadow: -1px 13px 14px 0px rgba(0,0,0,0.37);
+  box-shadow: -1px 13px 14px 0px rgba(0,0,0,0.37);
 }
 
 .info{
@@ -79,6 +82,9 @@ a {
   background-size: cover;
   padding: 10rem 0;
   display: flex;
+  -webkit-box-shadow: -1px 13px 14px 0px rgba(0,0,0,0.37);
+  -moz-box-shadow: -1px 13px 14px 0px rgba(0,0,0,0.37);
+  box-shadow: -1px 13px 14px 0px rgba(0,0,0,0.37);
 }
 
 .linea{
@@ -104,8 +110,16 @@ a {
 .cursosTxt{
   font-size: 2rem;
   text-align: center;
-  margin: 2rem;
+  margin-top: 5rem; margin-bottom: 3rem;
   color: #000000;
+}
+
+.item{
+  text-align: center;
+}
+
+.btnCurso{
+  padding: .5rem 1rem;
 }
 /* Sticky footer styles
 -------------------------------------------------- */
@@ -152,3 +166,4 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
