--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,5 @@
 ﻿@section Styles{
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
-  <link rel="stylesheet" href="~/css/site.css" />
 }
 
 
@@ -9,7 +8,7 @@
         <p class="parrafoCursos">
             Accedé a los mejores cursos del mercado en nuestra plataforma.<br>¿Querés obtener mayor información? 
             <br>
-            <button type="button" class="btn btn-danger">SABER MÁS</button>
+            <button type="button" class="btnSaberMas btn-danger">SABER MÁS</button>
          </p>
     </div>
 </section>
