--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@section Styles{
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
+  <link rel="stylesheet" href="~/css/all.css">
 }
 
 
@@ -49,9 +50,58 @@
     <p class="linea">Entendemos el contexto actual que está viviendo el mundo <br> por eso nos adaptamos y nuestros cursos son <br> de manera totalmente remota para que los puedas ver en cualquier <br> momento del día con profesores las 24hs.</p>
 </div>
 
-<p class="cursosTxt">¡Encontrá los mejores cursos acá!</p>
 
 
+<div class="container">
+  <p class="cursosCategoria"><strong>CATEGORÍA DE CURSOS</strong></p>
+  <p class="cursosTxt">Buscá la mejor opción para vos</p>
+  <div class="row">
+
+    <div class="col-md-3">
+      <a href="#"><img src="~/img/BaseDeDatos.png" alt=""></a>
+    </div>
+
+    <div class="col-md-3">
+      <a href="#"><img src="~/img/GamesDev.png" alt=""></a>
+    </div>
+
+    <div class="col-md-3">
+      <a href="#"><img src="~/img/MobileDev.png" alt=""></a>
+    </div>
+
+    <div class="col-md-3">
+      <a href="#"><img src="~/img/WebDev.png" alt=""></a>
+    </div>
+  </div>
+
+  <p class="lorem"><b>Aprendé de la mano de los mejores</b></p>
+  <p class="lorem1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis ad dolor error ut eligendi pariatur ipsam, inventore blanditiis. Delectus mollitia corrupti ut sequi, a ea pariatur veniam similique aliquid quo.</p>
+</div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 cardCursos">
+        <img src="~/img/Profesor1.jpg" alt="Avatar" style="width:100%">
+        <h4><b>John Doe</b></h4>
+        <p>Architect & Engineer</p>
+      </div>
+
+      <div class="col-md-4 cardCursos">
+        <img src="~/img/Profesor2.jpg" alt="Avatar" style="width:100%">
+        <h4><b>John Doe</b></h4>
+        <p>Architect & Engineer</p>
+      </div>
+
+      <div class="col-md-4 cardCursos">
+        <img src="~/img/Profesor3.jpg" alt="Avatar" style="width:100%">
+        <h4><b>John Doe</b></h4>
+        <p>Architect & Engineer</p>
+      </div>
+    </div>
+ </div>
+
+
+<!--
 <div class="row">
   <div class="owl-carousel owl-theme">
   <div class="item">
@@ -71,3 +121,4 @@
   </div>
 </div>
 </div>
+-->
