--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -78,9 +78,7 @@ align-items: center;
 background-size: cover;
 padding: 10rem 0;
 display: flex;
--webkit-box-shadow: -1px 13px 14px 0px rgba(0,0,0,0.37);
--moz-box-shadow: -1px 13px 14px 0px rgba(0,0,0,0.37);
-box-shadow: -1px 13px 14px 0px rgba(0,0,0,0.37);
+
 }
 
 .linea{
@@ -105,8 +103,7 @@ margin-top: 1rem;
 
 .cursosTxt{
 font-size: 2rem;
-text-align: center;
-margin-top: 5rem; margin-bottom: 3rem;
+margin-bottom: 3rem;
 color: #000000;
 }
 
@@ -134,48 +131,52 @@ padding: .5rem 1rem;
   margin: auto 0;
 }
 
-
-/*-------------------------------------------------- */
-html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+.boxCategorias{
+    background-color: #01ab73;
+    width: 200px;
+    height: 200px;
+    margin: 1em auto;
+    border-radius: 1.5em;
+    box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+    text-align: center;
+    
 }
 
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+.cursosCategoria{
+  color: #B20B4F;
+  font-size: 1.2rem;
+  margin-bottom: 0;
+  margin-top: 4rem;
 }
 
-button.accept-policy {
+.container img{
+  margin-bottom: 4rem;
+}
+
+.lorem{
+  font-size: 2rem;
+  text-align: center;
+  margin-top: 2rem;
+  margin-bottom: .5rem;
+}
+
+.lorem1{
   font-size: 1rem;
-  line-height: inherit;
+  text-align: center;
+  margin-top: .5rem;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
+.container img{
+  margin-bottom: 0;
 }
 
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+.card {
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
