--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -52,7 +52,7 @@
 
 
 
-<div class="container">
+<div class="backgroundCursos">
   <p class="cursosCategoria"><strong>CATEGORÍA DE CURSOS</strong></p>
   <p class="cursosTxt">Buscá la mejor opción para vos</p>
   <div class="row">
