Nosotros, FAQs, Index, Register hechos

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@section Styles{
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
   <link rel="stylesheet" href="~/css/all.css">
+  
 }
 
 
@@ -14,7 +15,7 @@
     </div>
 </section>
 
-<p class="mainTextGoal">¡Alcanzá tus metas de la mano de Digital Scilicet!</p>
+<p class="mainTextGoal"><b>¡Alcanzá tus metas de la mano de Digital Scilicet!</b></p>
 
 <div class="container">
             <div class="row">
@@ -52,25 +53,25 @@
 
 
 
-<div class="backgroundCursos">
+<div class="container">
   <p class="cursosCategoria"><strong>CATEGORÍA DE CURSOS</strong></p>
-  <p class="cursosTxt">Buscá la mejor opción para vos</p>
+  <p class="cursosTxt"><b>Buscá la mejor opción para vos</b></p>
   <div class="row">
 
-    <div class="col-md-3">
-      <a href="#"><img src="~/img/BaseDeDatos.png" alt=""></a>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+      <a href="#"><img src="~/img/BaseDeDatos.png" alt="" class="imgCategorias"></a>
     </div>
 
-    <div class="col-md-3">
-      <a href="#"><img src="~/img/GamesDev.png" alt=""></a>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+      <a href="#"><img src="~/img/GamesDev.png" alt="" class="imgCategorias"></a>
     </div>
 
-    <div class="col-md-3">
-      <a href="#"><img src="~/img/MobileDev.png" alt=""></a>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+      <a href="#"><img src="~/img/MobileDev.png" alt="" class="imgCategorias"></a>
     </div>
 
-    <div class="col-md-3">
-      <a href="#"><img src="~/img/WebDev.png" alt=""></a>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+      <a href="#"><img src="~/img/WebDev.png" alt="" class="imgCategorias"></a>
     </div>
   </div>
 
@@ -80,25 +81,126 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-4 cardCursos">
-        <img src="~/img/Profesor1.jpg" alt="Avatar" style="width:100%">
-        <h4><b>John Doe</b></h4>
-        <p>Architect & Engineer</p>
-      </div>
 
-      <div class="col-md-4 cardCursos">
-        <img src="~/img/Profesor2.jpg" alt="Avatar" style="width:100%">
-        <h4><b>John Doe</b></h4>
-        <p>Architect & Engineer</p>
-      </div>
+        <div class="profile-card col-md-4">
+          <div class="card-header">
+            <div class="pic">
+              <img src="~/img/Profesor1.jpg" alt="">
+            </div>
+            <div class="name">Juan Fernández</div>
+            <div class="desc">CEO & FOUNDER</div>
+            <div class="sm">
+              <a href="#" class="fab fa-facebook-f"></a>
+              <a href="#" class="fab fa-twitter"></a>
+              <a href="#" class="fab fa-github"></a>
+              <a href="#" class="fab fa-youtube"></a>
+            </div>
+          </div>
+        </div>
 
-      <div class="col-md-4 cardCursos">
-        <img src="~/img/Profesor3.jpg" alt="Avatar" style="width:100%">
-        <h4><b>John Doe</b></h4>
-        <p>Architect & Engineer</p>
-      </div>
+        <div class="profile-card col-md-4">
+          <div class="card-header">
+            <div class="pic">
+              <img src="~/img/Profesor2.jpg" alt="">
+            </div>
+            <div class="name">Milena Rodríguez</div>
+            <div class="desc">UX/UI Designer</div>
+            <div class="sm">
+              <a href="#" class="fab fa-facebook-f"></a>
+              <a href="#" class="fab fa-twitter"></a>
+              <a href="#" class="fab fa-github"></a>
+              <a href="#" class="fab fa-youtube"></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="profile-card col-md-4">
+          <div class="card-header">
+            <div class="pic">
+              <img src="~/img/Profesor3.jpg" alt="">
+            </div>
+            <div class="name">Hernán Vega</div>
+            <div class="desc">Developer & Designer</div>
+            <div class="sm">
+              <a href="#" class="fab fa-facebook-f"></a>
+              <a href="#" class="fab fa-twitter"></a>
+              <a href="#" class="fab fa-github"></a>
+              <a href="#" class="fab fa-youtube"></a>
+            </div>
+          </div>
+        </div>
+
+
+
+
     </div>
  </div>
+
+ <p class="textoEmpresas"><b>Todo esto es posible gracias a estas <br> empresas que nos apoyan</b></p>
+
+<div class="container">
+  <div class="row">
+
+    <div class="col-md-3 col-sm6">
+        <div class="panelEmpresas">
+          <img src="~/img/accenture.png" alt="">
+        </div>
+    </div>
+
+    <div class="col-md-3 col-sm6">
+        <div class="panelEmpresas">
+          <img src="~/img/amazon.png" alt="">
+        </div>
+    </div>
+
+    <div class="col-md-3 col-sm6">
+        <div class="panelEmpresas">
+          <img src="~/img/cisco.png" alt="">
+        </div>
+    </div>
+
+   <div class="col-md-3 col-sm6">
+        <div class="panelEmpresas">
+          <img src="~/img/Google.png" alt="">
+        </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+
+    
+      <div class="col-md-3 col-sm6">
+        <div class="panelEmpresas">
+          <img src="~/img/presidencia-de-la-nacion.png" alt="">
+        </div>
+      </div>
+
+      <div class="col-md-3 col-sm6">
+        <div class="panelEmpresas">
+          <img src="~/img/oracle.png" alt="">
+        </div>
+      </div>
+
+      <div class="col-md-3 col-sm6">
+        <div class="panelEmpresas">
+          <img src="~/img/accenture.png" alt="">
+        </div>
+      </div>
+    
+
+      <div class="col-md-3 col-sm6">
+        <div class="panelEmpresas">
+          <img src="~/img/j.p.morgan.png" alt="">
+        </div>
+      </div>
+      
+    
+  </div>
+</div>
+
+
 
 
 <!--
