--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - DigitalScilicet</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/css/site.css" />
-    @RenderSection("Styles", required: false)
+    <script src="https://kit.fontawesome.com/46e18bb4ff.js" crossorigin="anonymous"></script>
+     @RenderSection("Styles", required: false)
     
 </head>
 <body>
@@ -24,7 +24,7 @@
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Nosotros</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Nosotros">Nosotros</a>
                         </li>
 
                         <li class="nav-item">
@@ -32,7 +32,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">FAQs</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="FAQs">FAQs</a>
                         </li>
 
                         <li class="nav-item">
@@ -45,9 +45,20 @@
         </nav>
     </header>
     <div>
-        <main role="main" class="pb-3">
+        <main role="main">
             @RenderBody()
         </main>
+    </div>
+
+    <div class="fondo">
+        <p><br>SEGUINOS</p>
+        <div class="social-buttons">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        </div>
     </div>
 
     
