--- a/Views/Home/Nosotros.cshtml
+++ b/Views/Home/Nosotros.cshtml
@@ -66,7 +66,7 @@
 
 <div class="testimonial-section">
       <div class="inner-width">
-        <h1>What Our Clients Say</h1>
+        <h1>¿Qué dicen nuestros clientes?</h1>
         <div class="testimonial-pics">
           <img src="~/img/testimonio1.png" alt="test-1" class="active">
           <img src="~/img/testimonio2.png" alt="test-2">
@@ -77,7 +77,7 @@
         <div class="testimonial-contents">
           <div class="testimonial active" id="test-1">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab consequatur et adipisci ut, impedit cumque, similique, eum tenetur, numquam eligendi aliquid. Nulla sit, cupiditate corporis labore, modi natus officiis asperiores!</p>
-            <span class="description">Emy / Developer</span>
+            <span class="description">María / Developer</span>
           </div>
 
           <div class="testimonial" id="test-2">
@@ -87,12 +87,12 @@
 
           <div class="testimonial" id="test-3">
             <p>Lorem  similique, eum tenetur, numquam eligendi aliquid. Nulla sit, cupiditate corporis labore, modi natus officiis asperiores!</p>
-            <span class="description">Thomas / Developer</span>
+            <span class="description">Tomás / Developer</span>
           </div>
 
           <div class="testimonial" id="test-4">
             <p>Lorem ipsum dolorng elit. Ab consequatur et adipisci ut, impedit cumque, similique, eum tenetur, numquam eligendi aliquid. Nulla sit, cupiditate corporis labore, modi natus officiis asperiores!</p>
-            <span class="description">Monica / Developer</span>
+            <span class="description">Agustina / Developer</span>
           </div>
         </div>
       </div>
