--- a/Views/Home/Cursos.cshtml
+++ b/Views/Home/Cursos.cshtml
@@ -1,8 +1,22 @@
+@model List<Curso>
 @section Styles{
     <link rel="stylesheet" href="~/css/cursos.css">
     <link rel="stylesheet" href="~/css/lightslider.css">
 }
-	<div class="container">
+
+    <!--@foreach (Curso curso in Model)
+        {
+            <div>
+                <h1>@curso.Nombre</h1>
+                <p>@curso.Descripcion</p>
+                <p>@curso.Precio</p>
+            </div>
+        }-->
+    <a href="" id="ConsultarCursos">CONSULTAR CURSOS</a>
+	<!--<div class="container">
+        
+
+        
 		
 		<ul id="autoWidth" class="cs-hidden">
 		
@@ -65,4 +79,4 @@
 @section Scripts{
     <script src="~/js/lightslider.js"></script>
     <script src="~/js/script.js"></script>
-}
+}-->
