--- a/wwwroot/css/register.css
+++ b/wwwroot/css/register.css
@@ -5,10 +5,11 @@ body {
 .main {
     background-color: #FFFFFF;
     width: 400px;
-    height: 400px;
+    height: auto;
     margin: 1em auto;
     border-radius: 1.5em;
     box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
+    padding: 1.4rem;
 }
 
 .sign {
