--- a/wwwroot/css/cursos.css
+++ b/wwwroot/css/cursos.css
@@ -30,7 +30,7 @@
 .cardComprar{
 	background-color: #03a9f4;
 	width: 50%;
-	margin: 0 auto;
+	margin: 0 35%;
 	padding: .5rem;
 	margin-bottom: 1rem;
 	border-radius: 25px;
